--- a/Restaurant.css
+++ b/Restaurant.css
@@ -489,6 +489,7 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     border-radius: 25px;
 
 
