--- a/Restaurant.css
+++ b/Restaurant.css
@@ -11,6 +11,7 @@
 
 body {
     background-color: #F6F6F6;
+    
 }
 
 
@@ -483,8 +484,8 @@ nav {
 }
 
 .input {
-    width: 30%;
-    padding: 20px 25px;
+    width: 40%;
+    padding: 10px 25px;
     background-color: white;
     display: flex;
     flex-direction: row;
@@ -517,9 +518,17 @@ nav {
 footer {
     width: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+.foot{
+    display: flex;
     flex-direction: row;
     justify-content: space-around;
     padding: 3rem;
+    width: 100%;
 }
 
 .footer-left {
@@ -561,6 +570,13 @@ footer {
     line-height: 1.5;
 }
 
+.reserved p {
+    font-weight: 400;
+    color: #fff;
+    text-transform: none;
+    font-size: 25px;
+}
+
 
 
 @media screen and (max-width:900px) {
@@ -593,19 +609,20 @@ footer {
         align-items: center;
         height: 0;
         overflow: hidden;
-        transition: ease-in-out 1s;
+        transition: ease-in-out 2s;
 
     }
 
     .show {
         height: 30vh;
+        overflow: hidden;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         background-color: #F6F6F6;
         gap: 5px;
         padding-bottom: 15px;
-        transition: ease-in-out 1s;
+        transition: ease-in-out 2s;
 
     }
 
@@ -789,7 +806,7 @@ footer {
         width: 100%;
     }
 
-    footer {
+    .foot {
         display: flex;
         flex-direction: column;
         gap: 15px;
@@ -799,5 +816,8 @@ footer {
         display: flex;
         flex-direction: column;
         gap: 30px;
+    }
+    .reserved p{
+        text-align: center;
     }
 }
